checker/src/operation_checker/tests/snapshots/nitrogql_checker__operation_checker__tests__selection_set__unknown_selected_field.snap
---
source: checker/src/operation_checker/tests/mod.rs
expression: "check_operation_document(&schema, &doc)"
---
[
    CheckError {
        position: Pos {
            line: 4,
            column: 16,
            file: 0,
            builtin: false,
        },
        message: FieldNotFound {
            field_name: "user2",
            type_name: "Query",
        },
        additional_info: [
            (
                Pos {
                    line: 1,
                    column: 12,
                    file: 0,
                    builtin: false,
                },
                DefinitionPos {
                    name: "Query",
                },
            ),
        ],
    },
]
